# cre-debt-solana

./: .gitignore  create-test-usdc.js  data-models.md  docker-compose.yml  init-project.txt  initialize-platform.js  loan-core-template.rs
docs/: HACKATHON_TODO.md  developer-setup.md  hackathon-workplan.md  project-overview.md  project-readme.md  project-structure.md  smart-contract-spec.md  technical-architecture.md
programs/property-registry/: Cargo.toml
programs/property-registry/src/: lib.rs
scripts/: start-dev.sh
